# win_global_gpu

./: .gitignore  Cargo.toml  README.md  about.txt  build.rs  help.txt
assets/: win_global_gpu.ai
src/: charging_events.rs  elevate.rs  error.rs  exe_scan.rs  exe_scan_2.rs  full_win_scan.rs  hide_console.rs  hstring_utils.rs  main.rs  notification.rs  optimus.rs  panic.rs  prevent_duplicate.rs  registry.rs  winapp_scan.rs
